--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 REACT_APP_API_URL=https://your-backend-url.koyeb.app
+DB = "mongodb+srv://ssshhhh005:sam123sung@FirstCluster.mongodb.net/full-mern-stack-jwt?retryWrites=true&w=majority"
+JWT_SECRET=yourSecretKey
+
+
+
