--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://your-backend-url.koyeb.app
+REACT_APP_API_URL=https://victorious-calida-deadlycompliance420-43020d44.koyeb.app
 DB = "mongodb+srv://ssshhhh005:sam123sung@FirstCluster.mongodb.net/full-mern-stack-jwt?retryWrites=true&w=majority"
 JWT_SECRET=yourSecretKey
 
